@@ -171,6 +171,10 @@ class Journal
   private:
     friend class JournalTest;
 
+    /** switches the log file if necessary; sets the new log descriptor in the
+     * transaction */
+    ham_status_t switch_files_maybe(Transaction *txn);
+
     /** gets the lsn; only required for unittests */
     ham_u64_t get_lsn() {
         ScopedLock lock(m_mutex);
