@@ -1,3 +1,9 @@
+Sep 27, 2012 - chris ---------------------------------------------------
+o issue #16: Fixed log file switching for temporary Transactions
+
+Sep 25, 2012 - chris ---------------------------------------------------
+o Fixed recovery process for temporary Transactions
+
 Jul 23, 2012 - chris ---------------------------------------------------
                       release of hamsterdb-2.0.4
 
